--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -62,6 +62,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1) git log --pretty=format:%cI,%h,%an,%ae,%s > /home/claudio/@LCTM/commits_LCTM.csv\n",
+    "# 2) abrir excel e e na aba dados, importar o arquivo gerado pelo código acima\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del transactions['Vr. Desconto']\n",
+    "del transactions['Valor Venda']\n",
+    "del transactions['Tx Serviço']\n",
+    "del transactions[\"Caixa\"]\n",
+    "del transactions['Operador']\n",
+    "del transactions['Data Cancelamento']\n",
+    "del transactions['Operador Cancelamento']\n",
+    "del transactions['Operador Desconto']\n",
+    "del transactions['Operador Desc Repique']\n",
+    "del transactions['NRC']\n",
+    "del transactions['Comandas']\n",
+    "del transactions['Série NFCE']\n",
+    "del transactions['Série NFE']\n",
+    "del transactions['Integração']\n",
+    "del transactions['Observação']\n",
+    "del transactions['CO_CLIENTE']\n",
+    "del transactions['Atendente']\n",
+    "del transactions['IC_REVENDA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 46472 entries, 0 to 46471\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Cod Venda         4831 non-null   float64\n",
+      " 1   NFe               41642 non-null  object \n",
+      " 2   NFCe              46470 non-null  object \n",
+      " 3   Data Venda        46472 non-null  object \n",
+      " 4   Data Recebimento  46472 non-null  object \n",
+      " 5   Nome Cliente      41650 non-null  object \n",
+      " 6   Valor Recebido    46472 non-null  object \n",
+      " 7   Operação          46470 non-null  object \n",
+      " 8   Tipo Operação     46472 non-null  object \n",
+      " 9   Vendedor          4830 non-null   object \n",
+      "dtypes: float64(1), object(9)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "transactions.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +193,7 @@
        "      <th>Nome Cliente</th>\n",
        "      <th>Valor Recebido</th>\n",
        "      <th>Operação</th>\n",
-       "      <th>Tipo Operação</th>\n",
+       "      <th>venda</th>\n",
        "      <th>Vendedor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -194,71 +263,6 @@
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>406</td>\n",
-       "      <td>LULAS EMPANADAS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "      <td>38</td>\n",
-       "      <td>30/07/2022 21:22:51</td>\n",
-       "      <td>JESSICA</td>\n",
-       "      <td>981201</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>RISOTINHO DE CAMARÃO</td>\n",
-       "      <td>1</td>\n",
-       "      <td>52</td>\n",
-       "      <td>52</td>\n",
-       "      <td>30/07/2022 22:26:07</td>\n",
-       "      <td>JESSICA</td>\n",
-       "      <td>981201</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>981101.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6489</td>\n",
-       "      <td>30/07/2022 21:30:34</td>\n",
-       "      <td>30/07/2022 22:23:41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6,5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>LOCA</td>\n",
-       "      <td>JESSICA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>111</td>\n",
-       "      <td>AGUA SEM GAS</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6,5</td>\n",
-       "      <td>6,5</td>\n",
-       "      <td>30/07/2022 21:30:34</td>\n",
-       "      <td>JESSICA</td>\n",
-       "      <td>981101</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>981001.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6488</td>\n",
-       "      <td>30/07/2022 21:36:52</td>\n",
-       "      <td>30/07/2022 21:37:14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
-       "      <td>LOCA</td>\n",
-       "      <td>MARCIO</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -270,11 +274,6 @@
        "2        NaN     421  BURRATA COM JAMON E VERDE                    1   \n",
        "3        NaN      41              PORÇAO NACHOS                    1   \n",
        "4        NaN      97  JARRA SANGRIA LOCA SUMMER                    1   \n",
-       "5        NaN     406            LULAS EMPANADAS                    1   \n",
-       "6        NaN       2       RISOTINHO DE CAMARÃO                    1   \n",
-       "7   981101.0     NaN                       6489  30/07/2022 21:30:34   \n",
-       "8        NaN     111               AGUA SEM GAS                    1   \n",
-       "9   981001.0     NaN                       6488  30/07/2022 21:36:52   \n",
        "\n",
        "      Data Recebimento  Nome Cliente       Valor Recebido   Operação  \\\n",
        "0            Vr. Total  Vr. Unitário      Hora Lançamento  Atendente   \n",
@@ -282,91 +281,108 @@
        "2                   49            49  30/07/2022 20:03:12    JESSICA   \n",
        "3                   15            15  30/07/2022 20:17:28    JESSICA   \n",
        "4                   55            55  30/07/2022 20:22:20    GABRIEL   \n",
-       "5                   38            38  30/07/2022 21:22:51    JESSICA   \n",
-       "6                   52            52  30/07/2022 22:26:07    JESSICA   \n",
-       "7  30/07/2022 22:23:41           NaN                  6,5          2   \n",
-       "8                  6,5           6,5  30/07/2022 21:30:34    JESSICA   \n",
-       "9  30/07/2022 21:37:14           NaN                   36          3   \n",
        "\n",
-       "  Tipo Operação Vendedor  \n",
-       "0      CO_VENDA      NaN  \n",
-       "1          LOCA  JESSICA  \n",
-       "2        981201      NaN  \n",
-       "3        981201      NaN  \n",
-       "4        981201      NaN  \n",
-       "5        981201      NaN  \n",
-       "6        981201      NaN  \n",
-       "7          LOCA  JESSICA  \n",
-       "8        981101      NaN  \n",
-       "9          LOCA   MARCIO  "
+       "      venda Vendedor  \n",
+       "0  CO_VENDA      NaN  \n",
+       "1      LOCA  JESSICA  \n",
+       "2    981201      NaN  \n",
+       "3    981201      NaN  \n",
+       "4    981201      NaN  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions.head(10)"
+    "transactions.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 46472 entries, 0 to 46471\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   Cod Venda         4831 non-null   float64\n",
-      " 1   NFe               41642 non-null  object \n",
-      " 2   NFCe              46470 non-null  object \n",
-      " 3   Data Venda        46472 non-null  object \n",
-      " 4   Data Recebimento  46472 non-null  object \n",
-      " 5   Nome Cliente      41650 non-null  object \n",
-      " 6   Valor Recebido    46472 non-null  object \n",
-      " 7   Operação          46470 non-null  object \n",
-      " 8   Tipo Operação     46472 non-null  object \n",
-      " 9   Vendedor          4830 non-null   object \n",
-      "dtypes: float64(1), object(9)\n",
-      "memory usage: 3.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "transactions.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# del transactions['Vr. Desconto']\n",
-    "# del transactions['Valor Venda']\n",
-    "# del transactions['Tx Serviço']\n",
-    "# del transactions[\"Caixa\"]\n",
-    "# del transactions['Operador']\n",
-    "# del transactions['Data Cancelamento']\n",
-    "# del transactions['Operador Cancelamento']\n",
-    "# del transactions['Operador Desconto']\n",
-    "# del transactions['Operador Desc Repique']\n",
-    "# del transactions['NRC']\n",
-    "# del transactions['Comandas']\n",
-    "del transactions['Série NFCE']\n",
-    "del transactions['Série NFE']\n",
-    "del transactions['Integração']\n",
-    "del transactions['Observação']\n",
-    "del transactions['CO_CLIENTE']\n",
-    "del transactions['Atendente']\n",
-    "del transactions['IC_REVENDA']"
+    "#1 asgin the \"Cod Venda\" in the first record of each order to the \"Tipo Operação\" column\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# renomeei a coluna 'Tipo Operação' para 'venda'.\n",
+    "transactions.rename(columns = {'Tipo Operação':'venda'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pandas Drop Rows Based on Column Value\n",
+    "# https://sparkbyexamples.com/pandas/pandas-delete-rows-based-on-column-value/\n",
+    "transactions.drop(transactions[transactions['venda'] == 'CO_VENDA'].index, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# renomeei a coluna 'Cod Venda' para 'prim_col'.\n",
+    "transactions.rename(columns = {'Cod Venda':'prim_col'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['prim_col'] = np.int64(transactions['prim_col'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definindo a função time_of_day\n",
+    "def cod_ven(prime_col):\n",
+    "    \"\"\"\n",
+    "    Determina se a  compra foi feita pela manhã, tarde ou noite.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if prime_col != '':\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    elif hora < 17:\n",
+    "        \n",
+    "        return 'tarde'\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        return 'noite'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply time of day function to 'hora' column\n",
+    "\n",
+    "transactions['time_of_day'] = transactions.hora.apply(time_of_day)"
    ]
   }
  ],
