tudo certo até aqui

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Cod Venda</th>\n",
+       "      <th>prim_col</th>\n",
        "      <th>NFe</th>\n",
        "      <th>NFCe</th>\n",
        "      <th>Data Venda</th>\n",
@@ -193,24 +193,11 @@
        "      <th>Nome Cliente</th>\n",
        "      <th>Valor Recebido</th>\n",
        "      <th>Operação</th>\n",
-       "      <th>Tipo Operação</th>\n",
+       "      <th>venda</th>\n",
        "      <th>Vendedor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Código</td>\n",
-       "      <td>Produto</td>\n",
-       "      <td>Qtde</td>\n",
-       "      <td>Vr. Total</td>\n",
-       "      <td>Vr. Unitário</td>\n",
-       "      <td>Hora Lançamento</td>\n",
-       "      <td>Atendente</td>\n",
-       "      <td>CO_VENDA</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>981201.0</td>\n",
@@ -263,34 +250,47 @@
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>406</td>\n",
+       "      <td>LULAS EMPANADAS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>38</td>\n",
+       "      <td>30/07/2022 21:22:51</td>\n",
+       "      <td>JESSICA</td>\n",
+       "      <td>981201</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Cod Venda     NFe                       NFCe           Data Venda  \\\n",
-       "0        NaN  Código                    Produto                 Qtde   \n",
-       "1   981201.0     NaN                       6490  30/07/2022 20:02:56   \n",
-       "2        NaN     421  BURRATA COM JAMON E VERDE                    1   \n",
-       "3        NaN      41              PORÇAO NACHOS                    1   \n",
-       "4        NaN      97  JARRA SANGRIA LOCA SUMMER                    1   \n",
+       "   prim_col  NFe                       NFCe           Data Venda  \\\n",
+       "1  981201.0  NaN                       6490  30/07/2022 20:02:56   \n",
+       "2       NaN  421  BURRATA COM JAMON E VERDE                    1   \n",
+       "3       NaN   41              PORÇAO NACHOS                    1   \n",
+       "4       NaN   97  JARRA SANGRIA LOCA SUMMER                    1   \n",
+       "5       NaN  406            LULAS EMPANADAS                    1   \n",
        "\n",
-       "      Data Recebimento  Nome Cliente       Valor Recebido   Operação  \\\n",
-       "0            Vr. Total  Vr. Unitário      Hora Lançamento  Atendente   \n",
-       "1  30/07/2022 22:58:00           NaN                  209          1   \n",
-       "2                   49            49  30/07/2022 20:03:12    JESSICA   \n",
-       "3                   15            15  30/07/2022 20:17:28    JESSICA   \n",
-       "4                   55            55  30/07/2022 20:22:20    GABRIEL   \n",
+       "      Data Recebimento Nome Cliente       Valor Recebido Operação   venda  \\\n",
+       "1  30/07/2022 22:58:00          NaN                  209        1    LOCA   \n",
+       "2                   49           49  30/07/2022 20:03:12  JESSICA  981201   \n",
+       "3                   15           15  30/07/2022 20:17:28  JESSICA  981201   \n",
+       "4                   55           55  30/07/2022 20:22:20  GABRIEL  981201   \n",
+       "5                   38           38  30/07/2022 21:22:51  JESSICA  981201   \n",
        "\n",
-       "  Tipo Operação Vendedor  \n",
-       "0      CO_VENDA      NaN  \n",
-       "1          LOCA  JESSICA  \n",
-       "2        981201      NaN  \n",
-       "3        981201      NaN  \n",
-       "4        981201      NaN  "
+       "  Vendedor  \n",
+       "1  JESSICA  \n",
+       "2      NaN  \n",
+       "3      NaN  \n",
+       "4      NaN  \n",
+       "5      NaN  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,17 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#1 asgin the \"Cod Venda\" in the first record of each order to the \"Tipo Operação\" column\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,28 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transactions['prim_col'] = np.int64(transactions['prim_col'])"
+    "# If 'prim_col' value is not empty, set the value of column 'venda' to the value of column 'prim_col', else value of column 'venda' stays the same\n",
+    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if isinstance(row['prim_col'], float) else row['venda'], axis=1)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "transactions.loc[transactions['prime_col'] != 'NaN', 'venda'] = transactions['prime_col']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%capture\n",
+    "\n",
     "# Definindo a função time_of_day\n",
     "def cod_ven(prime_col):\n",
     "    \"\"\"\n",
@@ -372,28 +354,14 @@
     "    \n",
     "    if prime_col != 'NaN':\n",
     "\n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    elif hora < 17:\n",
-    "        \n",
-    "        return 'tarde'\n",
-    "    \n",
+    "        transactions = transactions.assign(venda=transactions['prim_col'])\n",
+    "            \n",
     "    else:\n",
     "        \n",
-    "        return 'noite'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        transactions = transactions.assign(venda=transactions['venda'])\n",
     "# Apply time of day function to 'hora' column\n",
     "\n",
-    "transactions['time_of_day'] = transactions.hora.apply(time_of_day)"
+    "transactions = transactions.apply(cod_ven)"
    ]
   }
  ],
