consegui mudar o valor da coluna venda

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "      <td>NaN</td>\n",
        "      <td>209</td>\n",
        "      <td>1</td>\n",
-       "      <td>LOCA</td>\n",
+       "      <td>981201.0</td>\n",
        "      <td>JESSICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -275,12 +275,12 @@
        "4       NaN   97  JARRA SANGRIA LOCA SUMMER                    1   \n",
        "5       NaN  406            LULAS EMPANADAS                    1   \n",
        "\n",
-       "      Data Recebimento Nome Cliente       Valor Recebido Operação   venda  \\\n",
-       "1  30/07/2022 22:58:00          NaN                  209        1    LOCA   \n",
-       "2                   49           49  30/07/2022 20:03:12  JESSICA  981201   \n",
-       "3                   15           15  30/07/2022 20:17:28  JESSICA  981201   \n",
-       "4                   55           55  30/07/2022 20:22:20  GABRIEL  981201   \n",
-       "5                   38           38  30/07/2022 21:22:51  JESSICA  981201   \n",
+       "      Data Recebimento Nome Cliente       Valor Recebido Operação     venda  \\\n",
+       "1  30/07/2022 22:58:00          NaN                  209        1  981201.0   \n",
+       "2                   49           49  30/07/2022 20:03:12  JESSICA    981201   \n",
+       "3                   15           15  30/07/2022 20:17:28  JESSICA    981201   \n",
+       "4                   55           55  30/07/2022 20:22:20  GABRIEL    981201   \n",
+       "5                   38           38  30/07/2022 21:22:51  JESSICA    981201   \n",
        "\n",
        "  Vendedor  \n",
        "1  JESSICA  \n",
@@ -290,7 +290,7 @@
        "5      NaN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If 'prim_col' value is not empty, set the value of column 'venda' to the value of column 'prim_col', else value of column 'venda' stays the same\n",
-    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if isinstance(row['prim_col'], float) else row['venda'], axis=1)\n"
+    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if row['venda'] == 'LOCA' else row['venda'], axis=1)\n"
    ]
   },
   {
