criei duas colunas data_venda e data_recebimento

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +195,8 @@
        "      <th>Operação</th>\n",
        "      <th>venda</th>\n",
        "      <th>Vendedor</th>\n",
+       "      <th>data_venda</th>\n",
+       "      <th>data_recebimento</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -208,8 +210,10 @@
        "      <td>NaN</td>\n",
        "      <td>209</td>\n",
        "      <td>1</td>\n",
-       "      <td>981201.0</td>\n",
+       "      <td>LOCA</td>\n",
        "      <td>JESSICA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -223,6 +227,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -236,6 +242,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -249,6 +257,8 @@
        "      <td>GABRIEL</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -262,6 +272,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,22 +287,22 @@
        "4       NaN   97  JARRA SANGRIA LOCA SUMMER                    1   \n",
        "5       NaN  406            LULAS EMPANADAS                    1   \n",
        "\n",
-       "      Data Recebimento Nome Cliente       Valor Recebido Operação     venda  \\\n",
-       "1  30/07/2022 22:58:00          NaN                  209        1  981201.0   \n",
-       "2                   49           49  30/07/2022 20:03:12  JESSICA    981201   \n",
-       "3                   15           15  30/07/2022 20:17:28  JESSICA    981201   \n",
-       "4                   55           55  30/07/2022 20:22:20  GABRIEL    981201   \n",
-       "5                   38           38  30/07/2022 21:22:51  JESSICA    981201   \n",
+       "      Data Recebimento Nome Cliente       Valor Recebido Operação   venda  \\\n",
+       "1  30/07/2022 22:58:00          NaN                  209        1    LOCA   \n",
+       "2                   49           49  30/07/2022 20:03:12  JESSICA  981201   \n",
+       "3                   15           15  30/07/2022 20:17:28  JESSICA  981201   \n",
+       "4                   55           55  30/07/2022 20:22:20  GABRIEL  981201   \n",
+       "5                   38           38  30/07/2022 21:22:51  JESSICA  981201   \n",
        "\n",
-       "  Vendedor  \n",
-       "1  JESSICA  \n",
-       "2      NaN  \n",
-       "3      NaN  \n",
-       "4      NaN  \n",
-       "5      NaN  "
+       "  Vendedor  data_venda  data_recebimento  \n",
+       "1  JESSICA           1                 1  \n",
+       "2      NaN           1                 1  \n",
+       "3      NaN           1                 1  \n",
+       "4      NaN           1                 1  \n",
+       "5      NaN           1                 1  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,36 +344,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['data_venda'] = 1\n",
+    "transactions['data_recebimento']=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If 'prim_col' value is not empty, set the value of column 'venda' to the value of column 'prim_col', else value of column 'venda' stays the same\n",
-    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if row['venda'] == 'LOCA' else row['venda'], axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "%%capture\n",
+    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if row['venda'] == 'LOCA' else row['venda'], axis=1)\n",
     "\n",
-    "# Definindo a função time_of_day\n",
-    "def cod_ven(prime_col):\n",
-    "    \"\"\"\n",
-    "    Determina se a  compra foi feita pela manhã, tarde ou noite.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    if prime_col != 'NaN':\n",
-    "\n",
-    "        transactions = transactions.assign(venda=transactions['prim_col'])\n",
-    "            \n",
-    "    else:\n",
-    "        \n",
-    "        transactions = transactions.assign(venda=transactions['venda'])\n",
-    "# Apply time of day function to 'hora' column\n",
-    "\n",
-    "transactions = transactions.apply(cod_ven)"
+    "# Vamos analisar cada parte dessa linha:\n",
+    "#transactions['venda']: Estamos nos referindo à coluna 'venda' do DataFrame transactions.\n",
+    "# Essa coluna será atualizada com base no resultado da operação que será realizada a seguir.\n",
+    "#transactions.apply(...): O método apply() é usado para aplicar uma função a todas as linhas \n",
+    "# (ou colunas) de um DataFrame. Neste caso, a função está sendo aplicada às linhas, conforme\n",
+    "# especificado pelo argumento axis=1.\n",
+    "#lambda row: ...: Estamos usando uma função lambda, que é uma função anônima e de uso único.\n",
+    "# Essa função aceita um argumento chamado row, que representa uma linha do DataFrame transactions.\n",
+    "#row['prim_col'] if row['venda'] == 'LOCA' else row['venda']: Esta é a lógica da função lambda.\n",
+    "# Estamos usando uma expressão condicional para verificar se o valor da coluna 'venda' na\n",
+    "# linha atual (row['venda']) é igual a 'LOCA'. Se for verdade, o valor da coluna 'prim_col'\n",
+    "# na mesma linha (row['prim_col']) será usado como resultado. Caso contrário, o próprio valor da coluna 'venda' será mantido."
    ]
   }
  ],
