setei o data_venda base em "Data Venda"

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -136,22 +136,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 46472 entries, 0 to 46471\n",
-      "Data columns (total 10 columns):\n",
+      "Int64Index: 46465 entries, 1 to 46471\n",
+      "Data columns (total 12 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
-      " 0   Cod Venda         4831 non-null   float64\n",
-      " 1   NFe               41642 non-null  object \n",
-      " 2   NFCe              46470 non-null  object \n",
-      " 3   Data Venda        46472 non-null  object \n",
-      " 4   Data Recebimento  46472 non-null  object \n",
-      " 5   Nome Cliente      41650 non-null  object \n",
-      " 6   Valor Recebido    46472 non-null  object \n",
-      " 7   Operação          46470 non-null  object \n",
-      " 8   Tipo Operação     46472 non-null  object \n",
+      " 0   prim_col          4831 non-null   float64\n",
+      " 1   NFe               41635 non-null  object \n",
+      " 2   NFCe              46463 non-null  object \n",
+      " 3   Data Venda        46465 non-null  object \n",
+      " 4   Data Recebimento  46465 non-null  object \n",
+      " 5   Nome Cliente      41643 non-null  object \n",
+      " 6   Valor Recebido    46465 non-null  object \n",
+      " 7   Operação          46463 non-null  object \n",
+      " 8   venda             46465 non-null  object \n",
       " 9   Vendedor          4830 non-null   object \n",
-      "dtypes: float64(1), object(9)\n",
-      "memory usage: 3.5+ MB\n"
+      " 10  data_venda        46465 non-null  object \n",
+      " 11  data_recebimento  46465 non-null  object \n",
+      "dtypes: float64(1), object(11)\n",
+      "memory usage: 4.6+ MB\n"
      ]
     }
    ],
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -210,10 +212,10 @@
        "      <td>NaN</td>\n",
        "      <td>209</td>\n",
        "      <td>1</td>\n",
-       "      <td>LOCA</td>\n",
+       "      <td>981201.0</td>\n",
        "      <td>JESSICA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>30/07/2022 20:02:56</td>\n",
+       "      <td>30/07/2022 22:58:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -227,8 +229,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>nd</td>\n",
+       "      <td>nd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -242,8 +244,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>nd</td>\n",
+       "      <td>nd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -257,8 +259,8 @@
        "      <td>GABRIEL</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>nd</td>\n",
+       "      <td>nd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -272,8 +274,8 @@
        "      <td>JESSICA</td>\n",
        "      <td>981201</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>nd</td>\n",
+       "      <td>nd</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -287,33 +289,33 @@
        "4       NaN   97  JARRA SANGRIA LOCA SUMMER                    1   \n",
        "5       NaN  406            LULAS EMPANADAS                    1   \n",
        "\n",
-       "      Data Recebimento Nome Cliente       Valor Recebido Operação   venda  \\\n",
-       "1  30/07/2022 22:58:00          NaN                  209        1    LOCA   \n",
-       "2                   49           49  30/07/2022 20:03:12  JESSICA  981201   \n",
-       "3                   15           15  30/07/2022 20:17:28  JESSICA  981201   \n",
-       "4                   55           55  30/07/2022 20:22:20  GABRIEL  981201   \n",
-       "5                   38           38  30/07/2022 21:22:51  JESSICA  981201   \n",
+       "      Data Recebimento Nome Cliente       Valor Recebido Operação     venda  \\\n",
+       "1  30/07/2022 22:58:00          NaN                  209        1  981201.0   \n",
+       "2                   49           49  30/07/2022 20:03:12  JESSICA    981201   \n",
+       "3                   15           15  30/07/2022 20:17:28  JESSICA    981201   \n",
+       "4                   55           55  30/07/2022 20:22:20  GABRIEL    981201   \n",
+       "5                   38           38  30/07/2022 21:22:51  JESSICA    981201   \n",
        "\n",
-       "  Vendedor  data_venda  data_recebimento  \n",
-       "1  JESSICA           1                 1  \n",
-       "2      NaN           1                 1  \n",
-       "3      NaN           1                 1  \n",
-       "4      NaN           1                 1  \n",
-       "5      NaN           1                 1  "
+       "  Vendedor           data_venda     data_recebimento  \n",
+       "1  JESSICA  30/07/2022 20:02:56  30/07/2022 22:58:00  \n",
+       "2      NaN                   nd                   nd  \n",
+       "3      NaN                   nd                   nd  \n",
+       "4      NaN                   nd                   nd  \n",
+       "5      NaN                   nd                   nd  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transactions.head(5)"
+    "transactions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,17 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transactions['data_venda'] = 1\n",
-    "transactions['data_recebimento']=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,6 +365,56 @@
     "# Estamos usando uma expressão condicional para verificar se o valor da coluna 'venda' na\n",
     "# linha atual (row['venda']) é igual a 'LOCA'. Se for verdade, o valor da coluna 'prim_col'\n",
     "# na mesma linha (row['prim_col']) será usado como resultado. Caso contrário, o próprio valor da coluna 'venda' será mantido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions['venda'] = np.int64(transactions['venda'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Função para verificar se o valor é uma data\n",
+    "def is_date(value):\n",
+    "    try:\n",
+    "        pd.to_datetime(value)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "\n",
+    "# Função para aplicar à coluna\n",
+    "def copy_date_or_set_nd(value):\n",
+    "    return value if is_date(value) else 'nd'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Criar a nova coluna 'data_venda' aplicando a função copy_date_or_set_nd\n",
+    "transactions['data_venda'] = transactions['Data Venda'].apply(copy_date_or_set_nd)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criar a nova coluna 'data_recebimento' aplicando a função copy_date_or_set_nd\n",
+    "transactions['data_recebimento'] = transactions['Data Recebimento'].apply(copy_date_or_set_nd)\n"
    ]
   }
  ],
