teste da alteração de "LOCA' e "Balcao"

--- a/lctm_v01.ipynb
+++ b/lctm_v01.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 46465 entries, 1 to 46471\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 10 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   prim_col          4831 non-null   float64\n",
@@ -150,10 +150,8 @@
       " 7   Operação          46463 non-null  object \n",
       " 8   venda             46465 non-null  object \n",
       " 9   Vendedor          4830 non-null   object \n",
-      " 10  data_venda        46465 non-null  object \n",
-      " 11  data_recebimento  46465 non-null  object \n",
-      "dtypes: float64(1), object(11)\n",
-      "memory usage: 4.6+ MB\n"
+      "dtypes: float64(1), object(9)\n",
+      "memory usage: 3.9+ MB\n"
      ]
     }
    ],
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +302,7 @@
        "5      NaN                   nd                   nd  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If 'prim_col' value is not empty, set the value of column 'venda' to the value of column 'prim_col', else value of column 'venda' stays the same\n",
     "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if row['venda'] == 'LOCA' else row['venda'], axis=1)\n",
+    "\n",
+    "# If 'prim_col' value is not empty, set the value of column 'venda' to the value of column 'prim_col', else value of column 'venda' stays the same\n",
+    "transactions['venda'] = transactions.apply(lambda row: row['prim_col'] if row['venda'] == 'Balcao' else row['venda'], axis=1)\n",
+    "\n",
     "\n",
     "# Vamos analisar cada parte dessa linha:\n",
     "#transactions['venda']: Estamos nos referindo à coluna 'venda' do DataFrame transactions.\n",
@@ -373,12 +375,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions['venda'] = np.int64(transactions['venda'])"
+    "# Função para verificar se o valor é uma string e contém apenas letras, testando se o código da celula anterior funcionou\n",
+    "def is_string_with_letters(value):\n",
+    "    return isinstance(value, str) and value.isalpha()\n",
+    "\n",
+    "# Aplicando o filtro para manter apenas as linhas onde o valor da coluna 'venda' é uma string e contém apenas letras\n",
+    "filtered_transactions = transactions[transactions['venda'].apply(is_string_with_letters)]\n",
+    "\n",
+    "filtered_transactions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
